--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Ashim Dongol</title>
     <link rel = "stylesheet" href = "style.css">
     <link rel = "stylesheet" href = "mediaqueries.css">
+    <link rel="icon" href="./assets/favicon-32x32.png">
 </head>
 <body>
     <nav id ="desktop-nav">
@@ -31,7 +32,7 @@
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
                 <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                 <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-                <li><a href="#contacts" onclick="toggleMenu()">Contacts</a></li> 
+                <li><a href="#contact" onclick="toggleMenu()">Contacts</a></li> 
             </div>
         </div>
     </nav>
@@ -44,8 +45,8 @@
             <h1 class="title">Ashim Dongol</h1>
             <p class="section__text__p2">Robotics and Automation Engineer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('assets/resume-example.pdf')">Download Resume</button>
-                <button class="btn btn-color-1" onclick="location.href= './#contacts'">Contact Info</button>
+                <button class="btn btn-color-2" onclick="window.open('assets/My Resume.pdf')">Download Resume</button>
+                <button class="btn btn-color-1" onclick="location.href= './#contact'">Contact Info</button>
             </div>
             <div id ="social-container">
                 <img src="./assets/linkedin.png" 
@@ -74,22 +75,25 @@
                         <img src="assets/experience.png" 
                         alt="Experience icon"
                         class="icon">
-                        <h3>Experience</h3>
-                        <p>2+ years <br>Robotics and Automation Engineer</p>
+                        <h3>Job Experience</h3>
+                        <p> < 1 year <br>Robotics Association of Nepal</p>
                     </div>
                     <div class="details-container">
                         <img src="assets/education.png" 
                         alt="Education icon"
                         class="icon">
                         <h3>Education</h3>
-                        <p>B.Tech Robotics and Automation Engineer</p>
+                        <p>Jain University <br>B.Tech Robotics and Automation</p>
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Cumque amet, laboriosam accusamus eaque rem numquam unde. 
-                        Quos minima iure voluptas distinctio adipisci rem officia, 
-                        rerum laudantium nobis et, eius dolore!</p>
+                    <p>
+                        An enthusiastic fresher with highly motivated and ability 
+                        to work in team and having bachelors of technology degree in 
+                        Robotics and Automation. Searching for relevant oppurtunities to 
+                        enrich problem solving skills. Open to learn new things.
+
+                    </p>
                 </div>
             </div>
         </div>
@@ -100,14 +104,14 @@
     </section>
     <section id ="experience">
         <p class ="section__text__p1">Explore My</p>
-        <h1 class ="title">Experience</h1>
+        <h1 class ="title">Skills</h1>
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Robotics Engineer</h2>
+                    <h2 class="experience-sub-title">Core Skills</h2>
                     <div class="article-container">
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/arduino.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
@@ -116,7 +120,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/fusion360.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
@@ -125,7 +129,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/ros.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
@@ -134,7 +138,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/python.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
@@ -143,7 +147,7 @@
                             </div>
                         </article>
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/c++.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
@@ -151,72 +155,90 @@
                                 <p>Beginner</p>
                             </div>
                         </article>
-                        <article>
-                            <img src="assets/checkmark.png" 
-                            alt="experience icon"
-                            class="icon">
-                            <div>
-                                <h3>NodeMcu</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
+                    <article>
+                        <img src="assets/html.png" 
+                        alt="experience icon"
+                        class="icon">
+                        <div>
+                            <h3>HTML</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="assets/esp.png" 
+                        alt="experience icon"
+                        class="icon">
+                        <div>
+                            <h3>NodeMcu</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="assets/raspberry-pi.png" 
+                        alt="experience icon"
+                        class="icon">
+                        <div>
+                            <h3>Raspberry Pi</h3>
+                            <p>Beginner</p>
+                        </div>
+                    </article>
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Others</h2>
+                    <h2 class="experience-sub-title">Other Skills</h2>
                     <div class="article-container">
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/word.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
-                                <h3>Arduino</h3>
+                                <h3>Word</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/excel.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
-                                <h3>Fusion 360</h3>
+                                <h3>Excel</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/powerpoint.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
-                                <h3>ROS</h3>
+                                <h3>Powerpoint</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="assets/css.png" 
+                            alt="experience icon"
+                            class="icon">
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="assets/content-writing.png" 
+                            alt="experience icon"
+                            class="icon">
+                            <div>
+                                <h3>Content Writing</h3>
                                 <p>Beginner</p>
                             </div>
                         </article>
                         <article>
-                            <img src="assets/checkmark.png" 
+                            <img src="assets/partners.png" 
                             alt="experience icon"
                             class="icon">
                             <div>
-                                <h3>Python</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="assets/checkmark.png" 
-                            alt="experience icon"
-                            class="icon">
-                            <div>
-                                <h3>C++</h3>
-                                <p>Beginner</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="assets/checkmark.png" 
-                            alt="experience icon"
-                            class="icon">
-                            <div>
-                                <h3>NodeMcu</h3>
-                                <p>Intermediate</p>
+                                <h3>Team Work</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                     </div>
@@ -235,45 +257,45 @@
             <div class="about-containers">
             <div class="details-container color-container">
             <div class="article-container">
-                <img src="assets/project-1.png" alt="Project 1"
+                <img src="assets/bot.jpg" alt="Project 1"
                 class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Smart Assistant Bot</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1'">
-                    Github
-                </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1'">
+                <button class="btn btn-color-2 project-btn" onclick="window.open('assets/SAB.pdf')">
                     Documents
+                </button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1/Smart-Assistant-Bot'">
+                    Github
                 </button>
             </div>
             </div>
             <div class="details-container color-container">
             <div class="article-container">
-                <img src="assets/project-2.png" alt="Project 2"
+                <img src="assets/vrs.png" alt="Project 2"
                 class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Virtual Robot Simulator</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1'">
-                    Github
-                </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1'">
+                <button class="btn btn-color-2 project-btn" onclick="window.open('assets/Report.pdf')">
                     Documents
+                </button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1/Virtual-Robot-Simulation'">
+                    Github
                 </button>
             </div>
             </div>
             <div class="details-container color-container">
             <div class="article-container">
-                <img src="assets/project-3.png" alt="Project 3"
+                <img src="assets/blank.jpg" alt="Project 3"
                 class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Comming Soon</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href=''">
                     Github
                 </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href=''">
                     Documents
                 </button>
             </div>
@@ -306,10 +328,10 @@
         <nav>
             <div class="nav-links-container">
                 <ul class="nav-links">
+                    <li><a href="#profile">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contacts</a></li>
                 </ul> 
             </div>
         </nav>
