--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </nav>
     <section id ="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Ashim Dongol profile picture">
+            <img src="./assets/a.png" alt="Ashim Dongol profile picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
             <h1 class="title">Ashim Dongol</h1>
             <p class="section__text__p2">Robotics and Automation Engineer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('assets/My Resume.pdf')">Download Resume</button>
+                <button class="btn btn-color-2" onclick="window.open('assets/Resume.pdf')">Download Resume</button>
                 <button class="btn btn-color-1" onclick="location.href= './#contact'">Contact Info</button>
             </div>
             <div id ="social-container">
@@ -65,7 +65,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="assets/about-pic.png" 
+                <img src="assets/b.png" 
                 alt="Profile picture" 
                 class="about-pic">
             </div>
@@ -215,6 +215,15 @@
                             </div>
                         </article>
                         <article>
+                            <img src="assets/matlab.png" 
+                            alt="experience icon"
+                            class="icon">
+                            <div>
+                                <h3>MATLAB</h3>
+                                <p>Beginner</p>
+                            </div>
+                        </article>
+                        <article>
                             <img src="assets/css.png" 
                             alt="experience icon"
                             class="icon">
@@ -251,7 +260,7 @@
         onclick="location.href='./#projects'"> 
     </section>
     <section id="projects" >
-        <p class="section__text__p1">Browse My Recent</p>
+        <p class="section__text__p1">Browse Some of My</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
@@ -287,16 +296,16 @@
             </div>
             <div class="details-container color-container">
             <div class="article-container">
-                <img src="assets/blank.jpg" alt="Project 3"
+                <img src="assets/racebot.png" alt="Project 3"
                 class="project-img">
             </div>
-            <h2 class="experience-sub-title project-title">Comming Soon</h2>
+            <h2 class="experience-sub-title project-title">Roborace Bot</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href=''">
-                    Github
-                </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href=''">
+                <button class="btn btn-color-2 project-btn" onclick="window.open('assets/rrb.pdf')">
                     Documents
+                </button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AshimD1/Robot-race-bot'">
+                    Github
                 </button>
             </div>
             </div>
