--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         An enthusiastic fresher with highly motivated and ability 
                         to work in team and having bachelors of technology degree in 
                         Robotics and Automation. Searching for relevant oppurtunities to 
-                        enrich problem solving skills. Open to learn new things.
+                        enrich problem solving skills. Open to learn new things. Thank You!
 
                     </p>
                 </div>
