--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
                             </div>
                         </article>
                         <article>
+                            <img src="assets/latex.png" 
+                            alt="experience icon"
+                            class="icon">
+                            <div>
+                                <h3>LaTeX</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
                             <img src="assets/partners.png" 
                             alt="experience icon"
                             class="icon">
