--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         alt="Experience icon"
                         class="icon">
                         <h3>Job Experience</h3>
-                        <p> < 1 year <br>Robotics Association of Nepal</p>
+                        <p> > 1 year <br>Robotics Association of Nepal</p>
                     </div>
                     <div class="details-container">
                         <img src="assets/education.png" 
