--- a/index.html
+++ b/index.html
@@ -76,22 +76,23 @@
                         alt="Experience icon"
                         class="icon">
                         <h3>Job Experience</h3>
-                        <p> > 1 year <br>Robotics Association of Nepal</p>
+                        <p> > 1 year <br><b>Robotics Association of Nepal</b></p>
                     </div>
                     <div class="details-container">
                         <img src="assets/education.png" 
                         alt="Education icon"
                         class="icon">
                         <h3>Education</h3>
-                        <p>Jain University <br>B.Tech Robotics and Automation</p>
+                        <p>Jain University <br><b>B.Tech Robotics and Automation</b></p>
                     </div>
                 </div>
                 <div class="text-container">
                     <p>
-                        An enthusiastic fresher with highly motivated and ability 
-                        to work in team and having bachelors of technology degree in 
-                        Robotics and Automation. Searching for relevant oppurtunities to 
-                        enrich problem solving skills. Open to learn new things. Thank You!
+                        Hi, <b>I’m Ashim Dongol</b>, a robotics and technology educator, maker, and lifelong learner with a passion for innovation and problem-solving. I specialize in designing hands-on learning experiences in robotics, IoT, 3D printing, and drone technology for students from grade school to university level.
+                    </p><br><p>With a B.Tech in Robotics and Automation, I’ve led numerous workshops, guided final-year engineering projects, and created curriculum-based content tailored to different learning levels. My approach blends theory with engaging practical applications—empowering students to explore, create, and innovate.
+</p><br> <p>I’m also deeply involved in projects around AI, embedded systems, and STEM outreach. Whether it's mentoring students in drone simulations or building smart systems with Arduino and Raspberry Pi, I love bringing ideas to life through technology.
+</p><br><p>Currently, I’m preparing to pursue my Master’s in Cybersecurity at Fordham University, where I aim to bridge my hardware expertise with cutting-edge security systems for the connected world.
+Let’s build something great together!. Thank You! </p>
 
                     </p>
                 </div>
