--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
             <h1 class="title">Ashim Dongol</h1>
-            <p class="section__text__p2">Robotics and Automation Engineer</p>
+            <p class="section__text__p2">Cybersecurity Student</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('assets/Resume.pdf')">Download Resume</button>
                 <button class="btn btn-color-1" onclick="location.href= './#contact'">Contact Info</button>
